前后端一些优化 (#69)
## Link to an issue

<!-- Please add an issue link if this PR is related with one. -->

## What

<!-- Please describe what this PR does in simple words. -->

1. feat: 喜欢/收藏视频列表接口增加作者信息、评论数等数据
2. fix: 视频评论数计算不正确（之前只计算了父评论，无子评论）
3. fix: user页面关注、粉丝、获赞数展示不正确
4. fix: 编辑资料页多余元素
5. optimize: 评论列表展示优化

## How

<!-- Please describe how you have implemented the changes. -->

## Screenshots

<!-- Please add screenshots if we need. -->

## How to test

<!-- Please describe how to test the changes you have made. -->

## Checklist

- [ ] Link to an issue if it really related.
- [ ] At least describe what this PR does.
- [ ] Use `rebase` to confirm that current branch doesn't conflict with
main branch.
- [ ] Unit tests. At least do not reduce the unit test coverage.
- [ ] Checked and updated `guidelines.md` which used to describe how to
build, deploy and use DouTok.
